--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "tinyhouse-tinyassign"]
-	path = tinyhouse
+	path = src/tinyassign/tinyhouse
 	url = https://AndrewWhalen@bitbucket.org/hickeyjohnteam/tinyhouse.git
