--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "tinyhouse-tinyassign"]
 	path = src/tinyassign/tinyhouse
-	url = https://bitbucket.org/hickeyjohnteam/tinyhouse.git
+	url = https://github.com/AlphaGenes/tinyhouse.git
